# trid3nt-qgis-plugin

./: .dockerignore  .env.local  .env.local.bak  .env.openrouter.example  .gitignore  Makefile  README.md  public_data_source_catalog.yaml
contracts/: README.md  pyproject.toml
contracts/schemas/: assessment_envelope.json  atomic_tool_metadata.json  catalog_entry.json  event_document.json  execution_handle.json  layer_uri.json  numeric_claim.json  pipeline_step_summary.json  project_document.json  run_document.json  run_result.json  session_document.json  ws_agent_message_chunk.json  ws_agent_thinking_chunk.json  ws_cancel.json  ws_chart_emission.json  ws_clarification_request.json  ws_clarification_response.json  ws_code_exec_request.json  ws_disambiguation_request.json  ws_error.json  ws_offer_catalog_addition.json  ws_pipeline_state.json  ws_recovery_choice.json  ws_region_choice_provided.json  ws_secret_add.json  ws_secrets_list.json  ws_session_resume.json  ws_session_state.json  ws_solve_progress.json  ws_spatial_input_request.json  ws_spatial_input_response.json  ws_tool_call_failed.json  ws_tool_call_progress.json  ws_tool_candidates.json  ws_tool_choice.json  ws_tool_payload_confirmation.json  ws_tool_payload_warning.json  ws_user_message.json
contracts/src/grace2_contracts/: __init__.py  case.py  case_results.py  catalog.py  chart_contracts.py  errors.py  execution.py  export_schemas.py  geoclaw_contracts.py  impact_envelope.py  openquake_contracts.py  output_quantities.py  payload_warning.py  publish_manifest.py  region_choice.py  sandbox_contracts.py  secrets.py  swmm_contracts.py  telemac_contracts.py  tool_registry.py  user.py  ws.py
contracts/src/grace2_contracts.egg-info/: SOURCES.txt  requires.txt
contracts/src/trid3nt_contracts/: auth.py  case.py  chart_contracts.py  common.py  envelope.py  event.py  export_schemas.py  landlab_contracts.py  mongo_collections.py  output_quantities.py  payload_warning.py  publish_manifest.py  sandbox_contracts.py  secrets.py  swmm_contracts.py  tool_registry.py  ws.py
contracts/tests/: conftest.py  test_auth.py  test_case.py  test_case_results.py  test_catalog.py  test_chart_contracts.py  test_collections.py  test_common.py  test_engine_run_args_mixin.py  test_envelope.py  test_errors.py  test_event.py  test_execution.py  test_export_schemas.py  test_geoclaw_contracts.py  test_impact_envelope.py  test_modflow_contracts.py  test_openquake_contracts.py  test_payload_warning.py  test_sandbox_contracts.py  test_secrets.py  test_swmm_contracts.py  test_tool_registry.py  test_user.py  test_ws.py
server/: .dockerignore  Dockerfile  README.md  launch_mexico_beach_surge.py  pyproject.toml  render_mexbeach_inundation.py  verify_mexico_beach_surge.py  verify_mexico_beach_waves.py  verify_readiness_geoclaw.py  verify_readiness_pluvial.py
server/scripts/: mcp_smoke.py  ws_animation_recorder.py  ws_client.py
server/src/grace2_agent/: __init__.py  __main__.py  adapter.py  auth.py  auth_handshake.py  bedrock_adapter.py  case_lifecycle.py  circuit_breaker.py  context_budget.py  layer_uri_emit.py  main.py  mode2_classifier.py  openai_adapter.py  persistence.py  pipeline_emitter.py  qgis_proxy.py  sandbox_executor.py  sandbox_runner.py  scenario_reuse.py  scripted_adapter.py  secrets_handler.py  server.py  spatial_input.py  tool_arg_normalizer.py  tool_catalog_http.py  uri_registry.py
server/src/grace2_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/src/grace2_agent/data/: tool_query_corpus.yaml
server/src/grace2_agent/tools/: README.md  __init__.py  _example_tool_template.py  _noaa_slr_raster.py  _pc_stac.py  _satellite_slider.py  aggregate_claims_across_sources.py  analyze_affected_fields.py  cache.py  catalog.py  chart_tools.py  clip_raster_to_bbox.py  clip_raster_to_polygon.py  clip_vector_to_polygon.py  compose_case_report.py  compute_aspect.py  compute_blended_composite.py  compute_building_density.py  compute_canopy_height.py  compute_change_detection.py  compute_colored_relief.py  compute_contours.py  compute_ndvi.py  (+119 more)
server/src/trid3nt_server/: __init__.py  __main__.py  adapter.py  auth_handshake.py  bedrock_adapter.py  case_lifecycle.py  categories.py  circuit_breaker.py  context_budget.py  credential_registry.py  layer_uri_emit.py  lessons.py  main.py  mode2_classifier.py  openai_adapter.py  persistence.py  pipeline_emitter.py  runaway_guard.py  sandbox_executor.py  sandbox_hardening.py  sandbox_runner.py  scenario_reuse.py  scripted_adapter.py  secrets_handler.py  server.py  spatial_input.py  telemetry.py  tool_arg_normalizer.py  tool_catalog_http.py  tool_gating.py  uri_registry.py
server/tests/: audit_gemini_schema_compliance.py  conftest.py  eval_routing_live.py  live_evidence_job_0169.py  smoke_zoom_to_emission_job_0160.py  test_active_aoi_repair_job2.py  test_adapter_strip_private_params.py  test_agent_routing.py  test_aggregate_claims_across_sources.py  test_allowed_set.py  test_always_offload_heavy_tools.py  test_analytical_qa.py  test_analyze_affected_fields.py  test_anon_identity_convergence.py  test_aoi_autofill_adr0017.py  test_aoi_pin_fetch_bbox_durability.py  test_aoi_pin_lane_c.py  test_aoi_residual_floored_zoom_to.py  test_aoi_snap_independent_of_geolocate.py  test_arg_normalizer_wave_4_10.py  test_auth_handshake.py  test_auth_required_gate.py  test_auto_create_case_job0262.py  test_auto_publish_droppable_raster.py  test_autostop_liveness.py  test_bedrock_adapter_thinking.py  test_bedrock_prompt_cache.py  test_bedrock_user_first.py  test_bench_block_hook_lane_a.py  test_building_detail_http_route.py  test_capture_zone_postprocess.py  test_case_authority_resume.py  test_case_binding_job0268.py  test_case_context_reset.py  test_case_history_rehydrate_f17.py  test_case_layer_persistence.py  test_case_layer_write_path_job0259.py  test_case_lifecycle.py  test_case_list_http_route.py  test_case_manifest_job165.py  (+366 more)
server/tests/fixtures/: case2_news_article.txt
server/tests/workflows/: test_model_flood_habitat_scenario.py  test_model_news_event_ingest.py  test_pelicun_damage_with_buildings.py
(+882 files in other folders)
