[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trid3nt-contracts"
version = "0.1.0"
description = "Shared contracts: WebSocket protocol, AssessmentEnvelope, EventMetadata/ClaimSet, MongoDB collection schemas, CatalogEntry, and solver-execution shapes (SRS v0.3 Appendices A-D)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "schema specialist" }]
dependencies = [
    "pydantic>=2,<3",
    "python-ulid>=2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
trid3nt-export-schemas = "trid3nt_contracts.export_schemas:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trid3nt_contracts = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
